--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,22 +1,29 @@
-<h1>投稿一覧</h1>
-<p><%= notice %></p>
+<header>
+  <h1>投稿一覧</h1>
+  <p><%= notice %></p>
+</header>
 <br><%= link_to 'ブログ一覧画面に戻る', '/blogs' %>
-<table>
-  <tr>
-    <th>タイトル</th>
-    <th>内容</th>
-    <th>imege</th>
-  </tr>
-<% @blogs.each do |blog| %>
-  <tr>
-    <td><%= blog.title %></td>
-    <td><%= blog.content %></td>
-    <td><%= image_tag(blog.image_url) if blog.image && blog.image.url %></td>
-    <td><%= link_to '閲覧', blog_path(blog.id) %></td>
-    <td><%= link_to "編集する", edit_blog_path(blog.id),data: { confirm: '本当に編集していいですか？' } %></td>
-    <td><%= link_to '削除する', blog_path(blog.id), method: :delete,data: { confirm: '本当に削除していいですか？' } %></td>
-    <td>ユーザー名<%= blog.user.name %></td>
-    <% end %>
-  </tr>
- </table>
-<br><%= link_to '新しくブログを投稿する', new_blog_path %>
+<div >
+  <table>
+    <tr>
+      <th>タイトル</th>
+      <th>内容</th>
+      <th>imege</th>
+    </tr>
+    <% @blogs.each do |blog| %>
+    <tr>
+      <td><%= blog.title %></td>
+      <td><%= blog.content %></td>
+      <td><%= image_tag(blog.image_url) if blog.image && blog.image.url %></td>
+      <td><%= link_to '閲覧', blog_path(blog.id) %></td>
+      <td><%= link_to "編集する", edit_blog_path(blog.id),data: { confirm: '本当に編集していいですか？' } %></td>
+      <td><%= link_to '削除する', blog_path(blog.id), method: :delete,data: { confirm: '本当に削除していいですか？' } %></td>
+      <td>ユーザー名<%= blog.user.name %></td>
+      <% end %>
+    </tr>
+  </table>
+</div>
+<footer>
+  <p><%= link_to '新しくブログを投稿する', new_blog_path %></p>
+  <p>株式会社yoshi</p>
+</footer>
