--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SessionLogin</title>
+    <title>ログイン</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+ 　　<meta name="viewport" content="width=device-width">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -21,8 +21,11 @@
           <%= link_to "Sign up", new_user_path %>
           <%= link_to "Login", new_session_path %>
     </header>
-        <footer>株式会社yoshi</footer>
-        <% end %>
+    <% end %>
+        <footer>
+          <p>株式会社yoshi</p>
+          <p>課題提出用アプリ</p>
+        </footer>
     <%= yield %>
   </body>
 </html>
